--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 WebStudio
             </a>
             <ul>
-                <li><a href="">Студия</a></li>
+                <li><a href="./студия.html">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
@@ -72,7 +72,7 @@
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <img src="./images/img-one.jpg" alt="./imagines/img-one.svg" width="370">
+                    <img src="./images/img-one.jpg" alt="" width="370">
 
                 </li>
             </ul>
@@ -120,11 +120,12 @@
     <footer>
         <a href="">WebStudio</a>
 
+        <ul><li>г. Киев, пр-т Леси Украинки, 26</li></ul>
         <address>
-            <li>г. Киев, пр-т Леси Украинки, 26</li>
+            
             <ul>
                  <li><a href="info@example.com">info@example.com</a></li>
-                <li><a href="+38 096 111 11 11">+38 096 111 11 11</a></li>
+                <li><a href="+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
 
