--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
         <!-- Шапка -->
         <nav>
-           <a href="" class="logo">WebStudio</a>
+        <a href="" class="logo"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
             <ul class="site-nav list">
-                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="./index.html" class="link current">Студия</a></li>
                 <li><a href="./portfolio.html" class="link">Портфолио</a></li>
                 <li><a href="" class="link">Контакты</a></li>
             </ul>
@@ -130,7 +130,7 @@
     </main>
 
     <footer class="footer">
-        <a href="" class="logo">WebStudio</a>
+        <a href="" class="logo"><span class="logo-web">Web</span><span class="logo-studio-two">Studio</span></a>
 
         <ul><li class="direction">г. Киев, пр-т Леси Украинки, 26</li></ul>
         <address>
