--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <footer class="footer">
         <a href="" class="logo"><span class="logo-web">Web</span><span class="logo-studio-two">Studio</span></a>
          
-<address>
+<address class="add">
 <p class="direction">г. Киев, пр-т Леси Украинки, 26</p>
     <ul class="adress-nav">
         <li><a href="info@example.com" class="link">info@example.com</a></li>
